test/files/neg/t5803.check
t5803.scala:3: error: could not find implicit value for parameter ev: Nothing
  new Foo(): String
  ^
1 error
